--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,7 +61,7 @@
                     {% endif %}
                     -->
 
-                   <!-- {% if site.zhihu_username %}
+                    {% if site.zhihu_username %}
                     <li>
                         <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
                             <span class="fa-stack fa-lg">
@@ -70,7 +70,7 @@
                             </span>
                         </a>
                     </li>
-                    {% endif %}-->
+                    {% endif %}
                     <!--
                     {% if site.weibo_username %}
                     <li>
