--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,11 +76,10 @@ layout: default
                     <div class="ds-share-inline">
                       <ul  class="ds-share-icons-16">
 
-                       <!-- <li data-toggle="ds-share-icons-more"><a class="ds-more" href="#">分享到：</a></li>
-                        <li><a class="ds-wechat flat" href="javascript:void(0);" data-service="wechat">微信</a></li>
-                        <li><a class="ds-weibo flat" href="javascript:void(0);" data-service="weibo">微博</a></li>
-                        <li><a class="ds-douban flat" href="javascript:void(0);" data-service="douban">豆瓣</a></li>
--->
+                       <li data-toggle="ds-share-icons-more">以上皆为坐着所思所得，如有错误欢迎指正。</li>
+                        <li>联系方法：邮箱：panfeng_liu@foxmail.com</li>
+                        <li>欢迎转载，请保留原文链接。</li>
+                        <li>谢谢！嘻嘻！</li>
                       </ul>
                       <div class="ds-share-icons-more">
                       </div>
