--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -79,7 +79,7 @@ layout: default
                        <li data-toggle="ds-share-icons-more">以上皆为作者个人所思所得，如有错误欢迎指正。</li>
                         <li>联系方法：邮箱：971658291@.com</li>
                         <li>既然留了QQ邮箱，意味着欢迎大家来交流。</li>
-                        <li>欢迎转载，请保留原文链接.谢谢！嘻嘻！</li>
+                        <li>欢迎转载，请保留原文链接。谢谢！嘻嘻！</li>
                       </ul>
                       <div class="ds-share-icons-more">
                       </div>
