--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,15 @@
                             </span>
                         </a>
                     </li>
+                     <li>
+                        <a href="https://web.umeng.com/main.php?c=site&a=frame&siteid=1273102887#!/1520868532111/site/overview/1/1273102887/2018-03-12/2018-03-12">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <script src="https://s19.cnzz.com/z_stat.php?id=1273102887&web_id=1273102887" language="JavaScript"></script>
+                                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
                     {% if site.twitter_username %}
                     <li>
                         <a href="https://twitter.com/{{ site.twitter_username }}">
@@ -35,7 +44,7 @@
                     </li>
                     {% endif %}
                     
-                    <!--
+                    
                     {% if site.douban_username %}
                     <li>
                         <a href="http://www.douban.com/people/{{ site.douban_username }}">
@@ -46,7 +55,7 @@
                         </a>
                     </li>
                     {% endif %}
-                    -->
+                    
 
                     <!--
                     {% if site.facebook_username %}
