--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,9 +39,10 @@
                     
                     {% if site.douban_username %}
                     <li>
-                        <a href="http://www.douban.com/people/{{ site.douban_username }}">
+                        <a href="https://web.umeng.com/main.php?c=site&a=frame&siteid=1273102887">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
+                                <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1273102887'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3F   style='display:none;' id%3D1273102887' type='text/javascript'%3E%3C/script%3E"));document.getElementById("cnzz_stat_icon_1273102887").style.display = "none";</script>
                                 <i class="fa fa-douban fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
