--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,8 +42,10 @@
                         <a href="https://web.umeng.com/main.php?c=site&a=frame&siteid=1273102887">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
+                                <div style="display:none">
                                 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1273102887'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1273102887' type='text/javascript'%3E%3C/script%3E"));</script>
-                                <i class="fa fa-douban fa-stack-1x fa-inverse"></i>
+                                </div>
+                                <i class="fa fa-douban fa-stack-1x fa-inverse">统</i>
                             </span>
                         </a>
                     </li>
