--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -94,6 +94,20 @@ layout: default
                     <div class="ds-thread" data-thread-key="{{page.id}}" data-title="{{page.title}}" data-url="{{site.url}}{{page.url}}"></div>
                 </div>
                 <!-- 多说评论框 end -->
+                <div id="gitmentContainer"></div>
+<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+<script>
+var gitment = new Gitment({
+    owner: 'hublanker',
+    repo: 'https://github.com/HuBlanker/blog',
+    oauth: {
+        client_id: '62eb0bff716ae4912c0c',
+        client_secret: 'd7f584d2b164d2ce8cbb313c8d80eb00b12d0d3b',
+    },
+});
+gitment.render('gitmentContainer');
+</script>
             </div>
         </div>
     </div>
