--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -100,7 +100,7 @@ layout: default
 <script>
 var gitment = new Gitment({
     owner: 'hublanker',
-    repo: 'hublanker.github.io',
+    repo: 'hublanker.github.io/blog',
     oauth: {
         client_id: '62eb0bff716ae4912c0c',
         client_secret: 'd7f584d2b164d2ce8cbb313c8d80eb00b12d0d3b',
