--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,8 +99,8 @@ layout: default
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  owner: 'hublanker',
-  repo: 'github.com/hublanker/blog/',
+  owner: 'HuBlanker',
+  repo: 'https://github.com/HuBlanker/blog',
   oauth: {
     client_id: '2ba6444802d872fccb76',
     client_secret: '6e215a68e83a7db38608c82c182ab698a63615c3',
