--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -100,7 +100,7 @@ layout: default
 <script>
 var gitment = new Gitment({
   owner: 'HuBlanker',
-  repo: 'https://github.com/HuBlanker/blog/',
+  repo: 'blog',
   oauth: {
     client_id: '2ba6444802d872fccb76',
     client_secret: '6e215a68e83a7db38608c82c182ab698a63615c3',
