--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,11 +99,11 @@ layout: default
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  owner: 'HuBlanker',
+  owner: '28507708',
   repo: 'blog',
   oauth: {
-    client_id: '2ba6444802d872fccb76',
-    client_secret: '6e215a68e83a7db38608c82c182ab698a63615c3',
+    client_id: '69630f9371bf7e258027',
+    client_secret: '910c40bcb8dcae7f0b781ba772cf29fc4fc92a2a',
   },
 })
 gitment.render('container')
