--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -94,13 +94,17 @@ layout: default
                     <div class="ds-thread" data-thread-key="{{page.id}}" data-title="{{page.title}}" data-url="{{site.url}}{{page.url}}"></div>
                 </div>
                 <!-- 多说评论框 end -->
-  <div id="container"></div>
+
+            </div>
+        </div>
+    </div>
+      <div id="container"></div>
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  owner: '28507708',
-  repo: 'blog',
+  owner: 'hublanker',
+  repo: 'https://github.com/HuBlanker/blog',
   oauth: {
     client_id: '69630f9371bf7e258027',
     client_secret: '910c40bcb8dcae7f0b781ba772cf29fc4fc92a2a',
@@ -108,9 +112,6 @@ var gitment = new Gitment({
 })
 gitment.render('container')
 </script>
-            </div>
-        </div>
-    </div>
 </article>
 
 
