--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -104,7 +104,7 @@ layout: default
 <script>
 var gitment = new Gitment({
   owner: 'hublanker',
-  repo: 'https://github.com/HuBlanker/blog',
+  repo: 'https://github.com/HuBlanker/blog/',
   oauth: {
     client_id: '69630f9371bf7e258027',
     client_secret: '910c40bcb8dcae7f0b781ba772cf29fc4fc92a2a',
