--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -104,10 +104,10 @@ layout: default
 <script>
 var gitment = new Gitment({
   owner: 'hublanker',
-  repo: 'https://github.com/HuBlanker/blog/',
+  repo: 'blog',
   oauth: {
-    client_id: '69630f9371bf7e258027',
-    client_secret: '910c40bcb8dcae7f0b781ba772cf29fc4fc92a2a',
+    client_id: 'efc3581371af477954ef',
+    client_secret: 'b3b9d18d0eb4ed55753160ccee07929ef8bfe133',
   },
 })
 gitment.render('container')
