--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -104,7 +104,7 @@ layout: default
 <script>
 var gitment = new Gitment({
   owner: 'hublanker',
-  repo: 'blog',
+  repo: 'hublanker.github.io',
   oauth: {
     client_id: 'efc3581371af477954ef',
     client_secret: 'b3b9d18d0eb4ed55753160ccee07929ef8bfe133',
