--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,8 +99,8 @@ layout: default
         </div>
     </div>
       <div id="container"></div>
-<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+<link rel="stylesheet" href="https://billts.site/extra_css/gitment.css">
+<script src="https://billts.site/js/gitment.js"></script>
 <script>
 var gitment = new Gitment({
     id: '{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}',
