--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -90,7 +90,7 @@
 
                 </ul>
                 <p class="copyright text-muted">
-                &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }} ❖ Powered by Jekyll.
+                &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }} ❖ Powered by Jekyll & Gitment.
                 </p>
             </div>
         </div>
