--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -139,4 +139,4 @@
 <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="/js/codeboy.min.js "></script>
+<script src="/js/pfliu.min.js "></script>
