--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                             </span>
                         </a>
                     </li>
-              
+
                     {% if site.twitter_username %}
                     <li>
                         <a href="https://twitter.com/{{ site.twitter_username }}">
@@ -39,8 +39,8 @@
                         </a>
                     </li>
                     {% endif %}
-                    
-                    
+
+
                     {% if site.douban_username %}
                     <li>
                         <a href="https://web.umeng.com/main.php?c=site&a=frame&siteid=1273102887">
@@ -54,9 +54,9 @@
                         </a>
                     </li>
                     {% endif %}
-                    
 
-                    
+
+
                     {% if site.facebook_username %}
                     <li>
                         <a href="https://www.facebook.com/{{ site.facebook_username }}">
@@ -67,7 +67,7 @@
                         </a>
                     </li>
                     {% endif %}
-                    
+
 
                     {% if site.zhihu_username %}
                     <li>
@@ -135,7 +135,8 @@
 <link href="http://cdn.bootcss.com/highlight.js/8.6/styles/github.min.css" rel="stylesheet">
 
 <!-- Bootstrap Core JavaScript -->
-<script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!-- <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <!-- Custom Theme JavaScript -->
 <script src="/js/pfliu.min.js "></script>
