--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -119,7 +119,7 @@
 <script src="{{ "/search/js/cb-search.js" | prepend: site.baseurl }}"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
+<!-- <script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script> -->
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
