--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,22 @@ layout: default
 
                 <hr>
 
+                <div id="container"></div>
+<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+<script>
+var gitment = new Gitment({
+  id: '', // 可选。默认为 location.href
+  owner: 'hublanker',
+  repo: 'blog',
+  oauth: {
+    client_id: 'cb39b56b472f24811e5c',
+    client_secret: '92f22469d62aead71cca535ddb41df3fed70882a',
+  },
+})
+gitment.render('container')
+</script>
+
                 <ul class="pager">
                     {% if page.previous.url %}
                     <li class="previous">
