--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@ layout: default
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  id: 'location.href', // 可选。默认为 location.href
+  id: '{{page.title}}', // 可选。默认为 location.href
   owner: 'hublanker',
   repo: 'blog',
   oauth: {
