--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Page Header -->
-<header class="intro-header" style="background-color: "{% if page.background-color %}{{ page.background-color }}{% else %}{{ site.background-color }}{% endif %}">
+<header class="intro-header" style="background-color: {% if page.background-color %}{{ page.background-color }}{% else %}{{ site.background-color }}{% endif %}>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
