--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,8 @@
 <!-- jQuery -->
 <!--<script src="//cdn.bootcss.com/jquery/2.2.2/jquery.min.js"></script>-->
 <!-- jQuery -->
-<script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
+<!-- <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script> -->
+<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 <footer>
     <div class="container">
         <div class="row">
