--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,11 +44,12 @@
 
                     {% if site.douban_username %}
                     <li>
-                        <a href="https://web.umeng.com/main.php?c=site&a=frame&siteid=1273102887">
+                        <a href="https://web.umeng.com/main.php?c=site&a=frame&siteid=1275034153#!/1539315697972/site/overview/1/1275034153/2018-10-12/2018-10-12">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <div style="display:none">
-<script src="https://s22.cnzz.com/z_stat.php?id=1275034153&web_id=1275034153" language="JavaScript"></script>                                </div>
+<script src="https://s22.cnzz.com/z_stat.php?id=1275034153&web_id=1275034153" language="JavaScript"></script>
+                                </div>
                                 <i class="fa fa-douban fa-stack-1x fa-inverse">统</i>
                             </span>
                         </a>
