--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,6 +43,6 @@
       s.parentNode.insertBefore(hm, s);
     })();
     </script> -->
-
+<meta name="baidu-site-verification" content="OVfeRnRSgH" />
 
 </head>
