test more posrs

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
                 </li>
                 {% endif %}{% endfor %}
 		<li>
-                    <a href="101.200.47.120:8100">Demo</a>
+                    <a href="/5.精选">Demo</a>
                 </li>
             </ul>
         </div>
