--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -102,7 +102,7 @@ layout: default
 
 
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-<script src="/js/gitment.js"></script>
+<script src="{{ site.baseurl }}/js/gitment.js"></script>
 <script>
 var gitment = new Gitment({
   id: '{{page.title}}', // 可选。默认为 location.href
