--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -91,7 +91,7 @@
 {% endif %}
 
 {% if include.type == 'page' %}
-<header class="intro-header" style="background-color: '{{ page.background-color }}'">
+<header class="intro-header" style="background-color: {{ page.background-color }}">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
