--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,11 @@
 </footer>
 
 <!-- jQuery -->
-<script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
+<!-- <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script> -->
+
+<!-- cdn -->
+<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
 
 <!-- Bootstrap Core JavaScript -->
 <!-- Currently, only navbar scroll-down effect at desktop still depends on this -->
