--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,10 +18,10 @@
 </footer>
 
 <!-- jQuery -->
-<!-- <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script> -->
+<script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
 
 <!-- cdn -->
-<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<!-- <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
 
 
 <!-- Bootstrap Core JavaScript -->
