--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,9 @@
 </footer>
 
 <!-- jQuery -->
-<script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
+<!-- <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script> -->
+<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js">
+</script>
 
 <!-- cdn -->
 <!-- <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
