--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,11 @@
 
 <!-- Bootstrap Core JavaScript -->
 <!-- Currently, only navbar scroll-down effect at desktop still depends on this -->
-<script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
+<!-- <script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script> -->
+
+<!-- cdn -->
+<script src="http://apps.bdimg.com/libs/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/hux-blog.min.js " | prepend: site.baseurl }}"></script>
