--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -7,7 +7,7 @@
 <style type="text/css">
     header.intro-header{
         position: relative;
-        background-color: {{ post.background-color }});
+        background-color: {{ page.background-color }};
         background: {{ page.header-bg-css }};
     }
 
