--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -38,16 +38,17 @@
     </a>
   </li>
   {% endif %}
-  {% if site.weibo_username %}
+  {% if site.baidu_tongji %}
   <li>
-    <a target="_blank" href="http://weibo.com/{{ site.weibo_username }}">
+    <a target="_blank" href="https://tongji.baidu.com/web/25282299/overview/index?siteId={{ site.baidu_tongji}}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
+        <i class="fa  fa-stack-1x fa-inverse">统</i>
       </span>
     </a>
   </li>
   {% endif %}
+
   {% if site.facebook_username %}
   <li>
     <a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
