--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -18,12 +18,12 @@
     </a>
   </li>
   {% endif %}
-  {% if site.csdn_username %}
+    {% if site.csdn_username %}
   <li>
-    <a href="https://me.csdn.net/{{ site.csdn_username }}">
+    <a target="_blank" href="https://me.csdn.net/{{ site.csdn_username }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-stack-1x fa-inverse">C</i>
+        <i class="fa  fa-stack-1x fa-inverse">C</i>
       </span>
     </a>
   </li>
