--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -28,7 +28,7 @@
     </a>
   </li>
   {% endif %}
-  {% if site.zhihu_username %}
+  {% if site.csdn_username %}
   <li>
     <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
       <span class="fa-stack fa-lg">
