--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -18,9 +18,9 @@
     </a>
   </li>
   {% endif %}
-    {% if site.csdn_username %}
+    {% if site.twitter_username %}
   <li>
-    <a target="_blank" href="https://me.csdn.net/{{ site.csdn_username }}">
+    <a target="_blank" href="https://me.csdn.net/{{ site.twitter_username }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa  fa-stack-1x fa-inverse">C</i>
@@ -28,7 +28,7 @@
     </a>
   </li>
   {% endif %}
-  {% if site.csdn_username %}
+  {% if site.zhihu_username %}
   <li>
     <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
       <span class="fa-stack fa-lg">
