--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,15 +30,14 @@
 
 <link rel="stylesheet" href="{{ "/search/css/cb-search.css" | prepend: site.baseurl }}">
 
-<script src="{{ "/search/js/bootstrap3-typeahead.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/search/js/cb-search.js" | prepend: site.baseurl }}"></script>
-
 </footer>
 
 <!-- jQuery -->
 <!-- <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script> -->
-<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js">
-</script>
+<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+
+<script src="{{ "/search/js/bootstrap3-typeahead.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/search/js/cb-search.js" | prepend: site.baseurl }}"></script>
 
 <!-- cdn -->
 <!-- <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
