--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,6 +30,9 @@
                     </li>
                     {% endif %}
                     {% endfor %}
+                    <li>
+                        <a href="{{ site.baseurl }}/个人简历.pdf">resume</a>
+                    </li>
                 </ul>
             </div>
         </div>
