--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,7 +31,7 @@
                     {% endif %}
                     {% endfor %}
                     <li>
-                        <a href="{{ site.baseurl }}/个人简历.pdf">resume</a>
+                        <a href="{{ site.baseurl }}/刘攀峰_Java工程师.pdf">resume</a>
                     </li>
                 </ul>
             </div>
