--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,6 +72,9 @@
     }
 </script>
 
+<script src="https://unpkg.com/mermaid@8.0.0/dist/mermaid.min.js"></script>
+<script>mermaid.initialize({startOnLoad:true});</script>
+
 <!--
      Because of the native support for backtick-style fenced code blocks
      right within the Markdown is landed in Github Pages,
