--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -1,3 +1,6 @@
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"type="text/javascript"></script> -->
+
+
 {% comment %}
     @param {string} type - 'page' | 'post' | 'keynote'
     @param {boolean} short
@@ -43,7 +46,9 @@
                     <h1>{{ page.title }}</h1>
                     {% comment %} always create a h2 for keeping the margin {% endcomment %}
                     <h2 class="subheading">{{ page.subtitle }}</h2>
-                    <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}</span>
+                    <span class="meta">Posted1 by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}
+                    Hot:<span id="hot"></span>
+                    </span>
                 </div>
             </div>
         </div>
@@ -108,3 +113,27 @@
   </div>
 </header>
 {% endif %}
+
+<h2 id="ddd"></h2>
+
+<script type="text/javascript">
+	//请求函数
+	window.onload =  function(){
+		var target1  = document.getElementById("hot");
+        alert(1);
+		$.ajax({
+			url: "http://couplecoders.tech:8090/count/s=" +  window.location.href.replace('http://huyan.couplecoders.tech',""),
+			type: "GET",
+			dataType: "text",
+			jsonp:"callback",
+			success: function(data) {
+                alert("right")
+                alert(data);
+				target1.innerHTML = data;
+			},
+			error: function(){
+				alert("wrong");
+			}
+		});
+	};
+</script>
