--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -122,7 +122,7 @@
 		var target1  = document.getElementById("hot");
         alert(1);
 		$.ajax({
-			url: "http://couplecoders.tech:8090/count/s=" +  window.location.href.replace('http://huyan.couplecoders.tech',""),
+			url: "http://couplecoders.tech:8090/count?s=" +  window.location.href.replace('http://huyan.couplecoders.tech',""),
 			type: "GET",
 			dataType: "text",
 			jsonp:"callback",
