--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -128,7 +128,7 @@
 			jsonp:"callback",
 			success: function(data) {
                 alert(data.num); 
-				target1.innerHTML = data.get("num");
+				target1.innerHTML = data.num;
 			},
 			error: function(){
 			}
