--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -47,7 +47,7 @@
                     {% comment %} always create a h2 for keeping the margin {% endcomment %}
                     <h2 class="subheading">{{ page.subtitle }}</h2>
                     <span class="meta">Posted1 by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}
-                    Hot:<span id="hot"></span>
+                    Hot:<span id="hot" style="color:red" ></span>
                     </span>
                 </div>
             </div>
